# EF-ADH-main

./: .editorconfig  .gitattributes  .gitignore  1.py  LICENSE  README.md  github_utils.py  main.py  pyproject.toml  requirements.txt  server.py
docx/: README_en.md  README_ja.md  README_zh-CN.md  README_zh-Classic.md  README_zh-TW.md
test/游戏所有废案/: 介绍.md
test/游戏所有废案/scenes/: cafe.py  hospital.py
test/游戏所有废案/ui/: dialog.py  ui_components.py
test/游戏所有废案/utils/: collision.py
